<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VotingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorAccent"
            android:text="Question Time!"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="italic"
            android:text="@string/Question"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textStyle="normal"
            android:text="@string/scale"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/scale1"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/button1_text"/>
            <Button
                android:id="@+id/scale2"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/button2_text"/>

            <Button
                android:id="@+id/scale3"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/button3_text"/>
            <Button
                android:id="@+id/scale4"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/button4_text"/>
            <Button
                android:id="@+id/scale5"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/button5_text"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>